// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Messaging/AdaptiveCard Card 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <img
          className="wxc-adaptive-cards-image wxc-ac-image-style--Person wxc-ac-image-size--Medium"
          src="https://developer.webex.com/images/webex-teams-logo.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": "50px",
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-weight--Lighter wxc-ac-color--Accent"
        >
          Cisco Webex Teams
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-weight--Bolder wxc-ac-horizontal-alignment--Left wxc-ac-wrap--true wxc-ac-color--Light wxc-ac-size--Large wxc-ac-spacing--Small"
        >
          Buttons and Cards Release
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-spacing--Padding wxc-ac-horizontal-alignment--Center wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--Light"
        >
          Release Date:
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-weight--Lighter wxc-ac-color--Light wxc-ac-spacing--Small"
        >
          Product:
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-weight--Lighter wxc-ac-color--Light wxc-ac-spacing--Small"
        >
          OS:
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--Light"
        >
          Aug 6, 2019
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--Light wxc-ac-weight--Lighter wxc-ac-spacing--Small"
        >
          Webex Teams
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-weight--Lighter wxc-ac-color--Light wxc-ac-spacing--Small"
        >
          Mac, Windows, Web
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
    >
      We're making it easier for you to interact with bots and integrations in Webex Teams. When your bot sends information in a space that includes a card with buttons, you can now easily interact with it.
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Buttons and Cards Resources:
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-spacing--Small wxc-ac-container--vertical"
      >
        <img
          alt=""
          className="wxc-adaptive-cards-image wxc-ac-image-size--Small"
          src="https://developer.webex.com/images/link-icon.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": "30px",
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-spacing--Small wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--Left wxc-ac-size--Medium"
        >
          [Developer Portal Buttons and Cards Guide]()
        </div>
      </div>
    </div>
    <div>
      <h5>
        ActionSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ActionSet",
    "actions": [
        {
            "type": "Action.Submit",
            "title": "Subscribe to Release Notes",
            "data": {
                "subscribe": true
            }
        }
    ],
    "horizontalAlignment": "Left",
    "spacing": "None"
}
      </pre>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Column 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 1
        </div>
        <img
          className="wxc-adaptive-cards-image"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 2
        </div>
        <img
          className="wxc-adaptive-cards-image"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 3
        </div>
        <img
          className="wxc-adaptive-cards-image"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      You can even repeat the background image...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--Center wxc-ac-wrap--true"
        >
          Those are some neat arrows
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Horizontal repeat...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Vertical repeat...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      />
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Bleed left
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container-style--emphasis wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--good wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--attention wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--warning wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Bleed center
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container-style--emphasis wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--good wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--attention wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--warning wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Bleed right
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container-style--emphasis wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--good wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--attention wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--warning wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Bleed all
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container-style--emphasis wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--good wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--attention wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--warning wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div>
          <h5>
            Graph Component
          </h5>
          <pre
            className="wxc-adaptive-cards-unknown-component"
          >
            {
    "type": "Graph"
}
          </pre>
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div>
          <h5>
            Graph Component
          </h5>
          <pre
            className="wxc-adaptive-cards-unknown-component"
          >
            {
    "type": "Graph"
}
          </pre>
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
        >
          This is a column
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container-style--emphasis wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--default wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
        >
          The columnset has a minHeight of 100px while this column has a minHeight of 200px so it should override
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--default wxc-ac-container--vertical"
      >
        <div>
          <h5>
            FactSet Component
          </h5>
          <pre
            className="wxc-adaptive-cards-unknown-component"
          >
            {
    "type": "FactSet",
    "facts": [
        {
            "title": "ColumnSet",
            "value": "MinHeight: 100px"
        },
        {
            "title": "Column 1",
            "value": "MinHeight: 200px"
        },
        {
            "title": "Column 2",
            "value": "MinHeight: 50px"
        }
    ]
}
          </pre>
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-wrap--true wxc-ac-size--Medium"
    >
      The middle column is set to rtl
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-spacing--Medium wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
        >
          Column One
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-rtl--true wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
        >
          العمود الثاني
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
        >
          Column three
        </div>
      </div>
    </div>
    <div
      className="wxc-container wxc-ac-container--vertical"
    >
      <div
        className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
      >
        <div
          className="wxc-adaptive-cards-column wxc-ac-container--vertical"
        >
          <img
            className="wxc-adaptive-cards-image wxc-ac-image-size--medium"
            src="https://adaptivecards.io/content/cats/3.png"
            style={
              Object {
                "backgroundColor": undefined,
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <div
            className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--center wxc-ac-weight--bolder"
          >
            SHADES
          </div>
        </div>
        <div
          className="wxc-adaptive-cards-column wxc-ac-separator--true wxc-ac-spacing--medium wxc-ac-container--vertical"
        >
          <div
            className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--center"
          >
            Dec 4
          </div>
          <div
            className="wxc-adaptive-cards-text-block wxc-ac-spacing--none wxc-ac-horizontal-alignment--center"
          >
            Final
          </div>
          <div
            className="wxc-adaptive-cards-text-block wxc-ac-size--extraLarge wxc-ac-horizontal-alignment--center"
          >
            7 - 40
          </div>
        </div>
        <div
          className="wxc-adaptive-cards-column wxc-ac-separator--true wxc-ac-spacing--medium wxc-ac-container--vertical"
        >
          <img
            className="wxc-adaptive-cards-image wxc-ac-image-size--medium wxc-ac-horizontal-alignment--center"
            src="https://adaptivecards.io/content/cats/2.png"
            style={
              Object {
                "backgroundColor": undefined,
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <div
            className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--center wxc-ac-weight--bolder"
          >
            SKINS
          </div>
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-weight--bolder"
    >
      Try clicking a column!
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 1
        </div>
        <img
          className="wxc-adaptive-cards-image"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 2
        </div>
        <img
          className="wxc-adaptive-cards-image"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 3
        </div>
        <img
          className="wxc-adaptive-cards-image"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          No Style
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--default wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Default Style
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--emphasis wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Emphasis Style
        </div>
        <div
          className="wxc-container wxc-ac-container--vertical"
        >
          <div
            className="wxc-adaptive-cards-text-block"
          >
            Container no style
          </div>
        </div>
        <div
          className="wxc-container wxc-ac-container-style--default wxc-ac-container--vertical"
        >
          <div
            className="wxc-adaptive-cards-text-block"
          >
            Container default style
          </div>
        </div>
        <div
          className="wxc-container wxc-ac-container-style--emphasis wxc-ac-container--vertical"
        >
          <div
            className="wxc-adaptive-cards-text-block"
          >
            Container emphasis style
          </div>
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Hi,
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-is-subtle--true"
    >
      MasterHip
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Column 1
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          (auto)
        </div>
        <img
          className="wxc-adaptive-cards-image"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--center"
        >
          (stretch)
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac-horizontal-alignment--center"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          (auto)
        </div>
        <img
          className="wxc-adaptive-cards-image"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Column Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-weight--bolder"
    >
      Pick up where you left off?
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-spacing--medium wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <img
          className="wxc-adaptive-cards-image wxc-ac-image-size--medium"
          src="https://unsplash.it/80?image=1083"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Silver Star Mountain
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-is-subtle--true wxc-ac-spacing--none"
        >
          Maps
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <img
          className="wxc-adaptive-cards-image wxc-ac-image-size--medium"
          src="https://unsplash.it/80?image=1082"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container-style--emphasis wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          Kitchen Remodel
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-is-subtle--true wxc-ac-spacing--none"
        >
          With EMPHASIS
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac-container--horizontal"
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <img
          className="wxc-adaptive-cards-image wxc-ac-image-size--medium"
          src="https://unsplash.it/80?image=1080"
          style={
            Object {
              "backgroundColor": undefined,
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block"
        >
          The Witcher
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-is-subtle--true wxc-ac-spacing--none"
        >
          Netflix
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Container 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-container wxc-ac-container--vertical"
    >
      <div
        className="wxc-adaptive-cards-text-block"
      >
        This is some text
      </div>
      <img
        className="wxc-adaptive-cards-image wxc-ac-image-size--large"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
    </div>
    <div
      className="wxc-container wxc-ac-container-style--default wxc-ac-container--vertical"
    >
      <div
        className="wxc-adaptive-cards-text-block"
      >
        This container has the default style
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--default"
      >
        color: default
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--accent"
      >
        color: accent
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--good"
      >
        color: good
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--warning"
      >
        color: warning
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--attention"
      >
        color: attention
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--light"
      >
        color: light
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
      >
        color: dark
      </div>
    </div>
    <div
      className="wxc-container wxc-ac-container-style--accent wxc-ac-container--vertical"
    >
      <div
        className="wxc-adaptive-cards-text-block"
      >
        This container has the accent style
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--default"
      >
        color: default
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--accent"
      >
        color: accent
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--good"
      >
        color: good
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--warning"
      >
        color: warning
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--attention"
      >
        color: attention
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--light"
      >
        color: light
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
      >
        color: dark
      </div>
      <div
        className="wxc-container wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
        >
          Contained container - no style
        </div>
      </div>
      <div
        className="wxc-container wxc-ac-container-style--emphasis wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
        >
          Contained container - emphasis
        </div>
      </div>
      <div
        className="wxc-container wxc-ac-container-style--default wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
        >
          Contained container - default
        </div>
      </div>
      <div
        className="wxc-container wxc-ac-container-style--good wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
        >
          Contained container - good
        </div>
      </div>
      <div
        className="wxc-container wxc-ac-container-style--warning wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
        >
          Contained container - warning
        </div>
      </div>
      <div
        className="wxc-container wxc-ac-container-style--attention wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
        >
          Contained container - attention
        </div>
      </div>
      <div
        className="wxc-container wxc-ac-container-style--accent wxc-ac-container--vertical"
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
        >
          Contained container - accent
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Image 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <img
      className="wxc-adaptive-cards-image wxc-ac-image-size--medium wxc-ac-image-style--person"
      src="https://adaptivecards.io/content/cats/1.png"
      style={
        Object {
          "backgroundColor": "blue",
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-ac-image-size--small"
      src="https://adaptivecards.io/content/cats/1.png"
      style={
        Object {
          "backgroundColor": undefined,
          "height": "60px",
          "width": "60px",
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-ac-image-size--large"
      src="https://adaptivecards.io/content/cats/2.png"
      style={
        Object {
          "backgroundColor": "#cdcdcd",
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image"
      src="https://adaptivecards.io/content/cats/3.png"
      style={
        Object {
          "backgroundColor": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Image Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-image-set wxc-ac-container--horizontal"
    >
      <img
        className="wxc-adaptive-cards-image wxc-ac-image-size--large wxc-ac-image-style--person"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": "red",
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-ac-image-size--medium"
        src="https://adaptivecards.io/content/cats/3.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-ac-image-size--small"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-ac-image-size--medium"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": "#cdcdcd",
            "height": "60px",
            "width": "60px",
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-ac-image-size--medium"
        src="https://adaptivecards.io/content/cats/2.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Rich Text Block 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-adaptive-cards-component "
    >
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "This is the first inline. "
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "We support colors,",
    "color": "good"
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": " both regular and subtle. ",
    "isSubtle": true
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Text ",
    "size": "small"
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "of ",
    "size": "medium"
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "all ",
    "size": "large"
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "sizes! ",
    "size": "extraLarge"
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Light weight text. ",
    "weight": "lighter"
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Bold weight text. ",
    "weight": "bolder"
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Highlights. ",
    "highlight": true
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Italics. ",
    "italic": true
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Strikethrough. ",
    "strikethrough": true
}
        </pre>
      </div>
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Monospace too!",
    "fontType": "monospace"
}
        </pre>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-adaptive-cards-component "
    >
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Date-Time parsing: {{DATE(2017-02-14T06:08:39Z,LONG)}} {{TIME(2017-02-14T06:08:39Z)}}"
}
        </pre>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-adaptive-cards-component "
    >
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Rich text blocks also support center alignment. Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor "
}
        </pre>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-adaptive-cards-component "
    >
      <div>
        <h5>
          TextRun Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "TextRun",
    "text": "Rich text blocks also support right alignment. Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor "
}
        </pre>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-adaptive-cards-component "
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Text Block 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-color--default"
    >
      color: default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-color--accent"
    >
      color: accent
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-color--good"
    >
      color: good
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-color--warning"
    >
      color: warning
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-color--attention"
    >
      color: attention
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-color--light"
    >
      color: light
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-color--dark"
    >
      color: dark
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      Font type not set.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-font-type--default"
    >
      Font type set to *default*.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-font-type--monospace"
    >
      Font type set to *monospace*.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--left"
    >
      **horizontalAlignment:left**
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--center"
    >
      **horizontalAlignment:center**
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-horizontal-alignment--right"
    >
      **horizontalAlignment:right**
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-is-subtle--false"
    >
      isSubtle:false
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-is-subtle--true"
    >
      isSubtle:true
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-adaptive-cards-text-block"
    >
      size:default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-size--small"
    >
      size:small
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-size--default"
    >
      size:default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-size--medium"
    >
      size:medium
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-size--large"
    >
      size:large
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-size--extraLarge"
    >
      size:extraLarge
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-weight--lighter"
    >
      weight: lighter
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-weight--default"
    >
      weight: default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-weight--bolder"
    >
      weight: bolder
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-wrap--false"
    >
      **wrap: false** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
    >
      **wrap: true** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-container-style--heading wxc-ac-wrap--true"
      role="heading"
    >
      Style set to heading
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-container-style--heading wxc-ac-color--good wxc-ac-wrap--true"
      role="heading"
    >
      Style set to heading, color set to good
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-container-style--default wxc-ac-wrap--true"
    >
      Style set to default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac-wrap--true"
    >
      Style unset
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
